styles.css
/* ... */
/* sponsorship start */

.contact {
    min-height: 70vh;
    padding: 20px;
}

h3.subtitle a {
    color: #41c19d;
}

h3.subtitle a,
.club-email a,
.club-website a {
    text-decoration: none;
    font-weight: 800;
}

.contact .agda {
    border-top: #fcfa29 solid 2px;
}

.contact .agda .club-email a,
.contact .agda .club-website a {
    color: #fcfa29;
}

.contact .bcit {
    border-top: #41c19d solid 2px;
}

.contact .bcit .club-email a,
.contact .bcit .club-website a {
    color: #41c19d;
}

.contact .sfu {
    border-top: #fe2e36 solid 2px;
}

.contact .sfu .club-email a {
    color: #fe2e36;
}

.contact .club {
    flex-wrap: wrap;
}

.club-email,
.club-website {
    width: 100%;
    text-align: center;
    padding-top: 10px;
    font-size: 25px;
}

.club-website a {
    border-bottom: white solid 1px;
    padding: 5px;
}

@media screen and (min-width: 769px) {
    .contact.text-align {
        flex-direction: row;
        align-items: baseline;
    }

    .contact .club {
        border: none;
    }
}

/* sponsorship end */

/* volunteer start */

.volunteer {
    padding: 20px;
}

.volunteer-signup {
    display: flex;
    justify-content: center;
    align-items: center;
}

.volunteer-signup .info-signup {
    margin: 0;
}

/* volunteer end */

#social-icons .right {
    padding-left: 50px;
}

#social-icons {
    padding-top: 50px;
}

.social-buttons a img {
    box-shadow: 0px 2px 1px 0px rgba(35,35,35,1);
    border-radius: 100px;
    transition: 0.3s;
    filter: brightness(90%);
    -webkit-filter: brightness(90%);
}

.social-buttons a:hover img {
    filter: brightness(100%); 
    -webkit-filter: brightness(100%); 
}

.social-buttons a:active img {
    box-shadow: 0px 0px 1px 0px rgba(35,35,35,1);
    transform: translate(0px, 2px);
    -webkit-transform: translate(0px, 2px); 
}

.social-buttons a {
    text-decoration: none;
}



/* button div */
#buttons {
  text-align: center;
}

/* start da css for da buttons */
.btn {
  padding: 15px 50px;
  font-size: 22px;
  text-decoration: none;
  margin: 20px;
  color: #fff;
  position: relative;
  display: inline-block;
      transition: 0.3s;
}

.btn:active {
  transform: translate(0px, 5px);
  -webkit-transform: translate(0px, 5px);
  box-shadow: 0px 1px 0px 0px #CE3323;
}

.blue {
  background-color: #55acee;
  box-shadow: 0px 5px 0px 0px #3C93D5;
}

.blue:hover {
  background-color: #6FC6FF;
}

.green {
  background-color: #41c19d;
  box-shadow: 0px 5px 0px 0px #369e81;
}

.green:hover {
  background-color: #4bdeb4;
}
.btn.green:active {
  box-shadow: 0px 1px 0px 0px #369e81;
}

.red {
  background-color: #b8000d;
  box-shadow: 0px 5px 0px 0px #89000a;
}

.red:hover {
  background-color: #CE3323;
}

.purple {
  background-color: #9b59b6;
  box-shadow: 0px 5px 0px 0px #82409D;
}

.purple:hover {
  background-color: #B573D0;
}

.orange {
  background-color: #e67e22;
  box-shadow: 0px 5px 0px 0px #CD6509;
}

.orange:hover {
  background-color: #FF983C;
}

.yellow {
  background-color: #f1c40f;
  box-shadow: 0px 5px 0px 0px #D8AB00;
}

.yellow:hover {
  background-color: #FFDE29;
}

@media screen and (max-width: 768px) {
    .social {
        //padding: 25px;
        -ms-transform: scale(0.75);
        -webkit-transform: scale(0.75);
        transform: scale(0.75);
    }

    .hero-picture {
        min-height: 45vh;
    }

    .hero {
        height: auto;
    }
}

